# cogstack-nlp

./: README.md
medcat-den/: README.md  pyproject.toml
medcat-den/src/medcat_den/: backend.py  base.py  config.py  den.py  wrappers.py
medcat-den/src/medcat_den/backend_impl/: __init__.py  file_den.py
medcat-den/src/medcat_den/cache/: local_cache.py
medcat-den/src/medcat_den/resolver/: resolver.py
medcat-den/tests/: __init__.py  test_backend_registration.py  test_defaults.py  test_file_system_den.py  test_model_card_validity.py  test_model_move.py  test_remote_den_disallows.py  test_resolver.py  test_v1_model_card.py  test_wrappers.py
medcat-den/tests/injection/: test_medcat_injection.py
medcat-plugins/embedding-linker/: README.md  pyproject.toml
medcat-plugins/embedding-linker/src/medcat_embedding_linker/: config.py  embedding_linker.py  registration.py  trainable_embedding_linker.py  transformer_context_model.py
medcat-plugins/embedding-linker/tests/: __init__.py  helper.py  test_embedding_linker.py
medcat-plugins/medcat-gliner/: README.md  pyproject.toml
medcat-plugins/medcat-gliner/src/medcat_gliner/: __init__.py  gliner_ner.py  registration.py
medcat-plugins/medcat-gliner/tests/: test_registration.py
medcat-trainer/client/: README.md  mctclient.py  pyproject.toml
medcat-trainer/client/tests/: test_mctclient.py
medcat-trainer/client/tests/integration/: test_integration_mctclient.py
medcat-trainer/docs/: admin_setup.md  advanced_usage.md  annotator_guide.md  client.md  demo_page.md  django_admin.md  index.md  installation.md  main.md  maintenance.md  meta_annotations.md  plugins.md  project_admin.md  project_group_admin.md  provisioning.md  pyproject.toml
medcat-trainer/webapp/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
medcat-trainer/webapp/api/: .coveragerc  manage.py
medcat-trainer/webapp/api/api/: data_utils.py  extensions.py  metrics.py  model_cache.py  model_import.py  models.py  oidc_utils.py  permissions.py  serializers.py  signals.py  solr_utils.py  utils.py  views.py
medcat-trainer/webapp/api/core/: plugin_discovery.py  settings.py  urls.py  wsgi.py
medcat-trainer/webapp/frontend/: .env  env.d.ts  package-lock.json  package.json  tsconfig.vitest.json  vite.config.ts  vitest.config.ts
medcat-trainer/webapp/frontend/public/: config.template.json
medcat-trainer/webapp/frontend/src/: App.vue  auth.ts  event-bus.ts  httpAuth.ts  main.ts  runtimeConfig.ts
medcat-trainer/webapp/scripts/: load_examples.py  nginx-entrypoint.sh  run-bg-process.sh  run.sh  run_local_debug.sh
medcat-trainer/webapp/scripts/provisioning/: __init__.py  example_projects.provisioning.yaml  model.py
medcat-v2/: .readthedocs.yaml  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
medcat-v2-tutorials/: README.md  mkdocs.yml  pyproject.toml  requirements.txt
medcat-v2-tutorials/.ci/: patch_notebook_installs.py
medcat-v2-tutorials/notebooks/: index.md
medcat-v2-tutorials/notebooks/advanced/: 2._Create_and_use_component.ipynb
medcat-v2-tutorials/notebooks/introductory/basic/: 4._Evaluating_performance_on_dataset.ipynb
medcat-v2-tutorials/notebooks/introductory/meta/: 1._Add_a_MetaCat_to_a_Model.ipynb
medcat-v2-tutorials/notebooks/introductory/migration/: 1._Migrate_v1_model_to_v2.ipynb
medcat-v2-tutorials/notebooks/introductory/relcat/: 1._Supervised_Training_Relation_Extraction.ipynb  2._Infering_relations_from_annotations_with_Relation_toolkit.ipynb
medcat-v2/.release/: prepare_minor_release.sh  prepare_patch_release.sh
medcat-v2/docs/: architecture.md  breaking_changes.md  index.md  migration_guide_v2.md  pyproject.toml
medcat-v2/medcat/: __init__.py  __main__.py  cat.py  trainer.py  version.py
medcat-v2/medcat/addons/: __init__.py  loader.py
medcat-v2/medcat/components/: types.py
medcat-v2/medcat/components/addons/: addons.py
medcat-v2/medcat/components/linking/: context_based_linker.py  embedding_linker.py  only_primary_name_linker.py  two_step_context_based_linker.py  vector_context_model.py
medcat-v2/medcat/components/ner/: dict_based_ner.py  vocab_based_annotator.py  vocab_based_ner.py
medcat-v2/medcat/config/: config.py
medcat-v2/medcat/data/: model_card.py
medcat-v2/medcat/deid/: __init__.py
medcat-v2/medcat/model_creation/: preprocess_snomed.py
medcat-v2/medcat/pipeline/: __init__.py  pipeline.py  speed_utils.py
medcat-v2/medcat/plugins/: __init__.py  catalog.py  cli.py  downloadable.py  installer.py  loader.py  registry.py
medcat-v2/medcat/plugins/data/: __init__.py  plugin_catalog.json
medcat-v2/medcat/storage/: serialisables.py
medcat-v2/medcat/tokenizing/: tokenizers.py
medcat-v2/medcat/tokenizing/regex_impl/: tokenizer.py
medcat-v2/medcat/tokenizing/spacy_impl/: tokenizers.py  tokens.py  utils.py
medcat-v2/medcat/utils/: download_scripts.py  exceptions.py  import_utils.py  postprocessing.py  registry.py  training_utils.py
medcat-v2/medcat/utils/legacy/: conversion_all.py  convert_cdb.py  convert_config.py  convert_meta_cat.py  convert_rel_cat.py
medcat-v2/medcat/utils/ner/: data_collator.py
medcat-v2/paper/: README.md
medcat-v2/paper/scripts/: run_all_at_once.sh
medcat-v2/paper/scripts/performance/: common_pref.py  get_performance_all.sh  get_performance_for_model_and_ds.py  get_regression_all.sh  my_stats.py  regression_perf.py  v1_helper.py
medcat-v2/paper/scripts/speed/: common.py  common4subproc.py  get_inference_speed.py  (+17 more)
medcat-v2/tests/: __init__.py  resource_fetch.py  test_cat.py  test_trainer.py
medcat-v2/tests/components/: test_registration.py  test_types.py
medcat-v2/tests/config/: test_config_serialisation.py
medcat-v2/tests/other/: check_base_install_can_import_all.py  download_all_transformers_models.py
medcat-v2/tests/pipeline/: test_speed_utils.py
medcat-v2/tests/plugins/: test_catalog.py  test_cli.py  test_downloadable.py  test_installer.py  test_loader.py
medcat-v2/tests/resources/: supervised_mct_export.json
medcat-v2/tests/utils/: test_download_scripts.py  test_import_utils.py  test_postprocessing.py  test_training_utils.py
(+255 files in other folders)
