[project]
name = "medcat-embedding-linker"

dynamic = ["version"]

description = "Embeddings based linker for MedCAT"

readme = "README.md"

requires-python = ">=3.10"

license = {text = "Apache-2.0"}

keywords = ["ML", "NLP", "NER+L"]

authors = [
  {name = "A. Sutton"},
  {name = "T. Searle"},
  {name = "M. Ratas"},
]

# This should be your name or the names of the organization who currently
# maintains the project, and a valid email address corresponding to the name
# listed.
maintainers = [
  {name = "CogStack", email = "contact@cogstack.org" }
]

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 5 - Production/Stable",

  "Intended Audience :: Healthcare Industry",
  # "Topic :: Natural Language Processing :: Named Entity Recognition and Linking",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "python_requires" below.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]

# This field lists other packages that your project depends on to run.
# Any package you put here will be installed by pip when your project is
# installed, so they must be valid existing projects.
#
# For an analysis of this field vs pip's requirements files see:
# https://packaging.python.org/discussions/install-requires-vs-requirements/
dependencies = [
  "medcat[spacy]>=2.5",
  "transformers>=4.41.0,<5.0", # avoid major bump
  "torch>=2.4.0,<3.0",
  "tqdm",
]

# List additional groups of dependencies here (e.g. development
# dependencies). Users will be able to install these using the "extras"
# syntax, for example:
#
#   $ pip install sampleproject[dev]
#
# Similar to `dependencies` above, these must be valid existing
# projects.
[project.optional-dependencies] # Optional
dev = [
  "ruff~=0.1.7",
  "mypy",
  "types-tqdm",
  "types-setuptools",
  "types-PyYAML",
]

# entry-points to add onto medcat
[project.entry-points."medcat.plugins"]
medcat_embedding_linker = "medcat_embedding_linker"

[project.urls]
"Homepage" = "https://cogstack.org/"
"Bug Reports" = "https://discourse.cogstack.org/"
"Source" = "https://github.com/CogStack/cogstack-nlp/tree/main/medcat-plugins/embed-linker"

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"medcat_embed_linker" = ["py.typed"]

[tool.setuptools_scm]
# look for .git folder in root of repo
root = "../.."
version_scheme = "post-release"
local_scheme = "no-local-version"
tag_regex = "^medcat-embedding-linker/v(?P<version>\\d+(?:\\.\\d+)*)(?:[ab]\\d+|rc\\d+)?$"
git_describe_command = "git describe --dirty --tags --long --match 'medcat-embedding-linker/v*'"

[tool.ruff.lint]
# 1. Enable some extra checks for ruff
select = ["E", "F"]
# ignore unused local variables
ignore = ["F841"]
