[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medcattrainer-client"
version = "1.3.0"
description = "Python client for interacting with a MedCATTrainer instance"
readme = "client/README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Tom Searle", email = "tom@cogstack.org" }]
dependencies = ["requests"]

[project.urls]
Homepage = "https://github.com/CogStack/cogstack-nlp/"
Documentation = "https://docs.cogstack.org/projects/medcat-trainer"
Source = "https://github.com/CogStack/cogstack-nlp/"
